--- a/termos.html
+++ b/termos.html
@@ -297,7 +297,7 @@
 				<div class="menuPagin">
 					<div class="menuPagin-pagins">
 						<a href="./index.html">Home</a>
-						<a href="#">Sobre</a>
+						<a href="./sobre.html">Sobre</a>
 						<a href="#">Contato</a>
 						<a href="./termos.html">Termos / Privacidade</a>
 					</div>
@@ -336,7 +336,7 @@
 			<main class="navgation">
 				
 				<div class="navgation-pagins">
-					<a href="">Sobre</a>
+					<a href="./sobre.html">Sobre</a>
 					<a href="">Contato</a>
 					<a href="./termos.html">Termos / Privacidade</a>
 				</div>
