--- a/login.html
+++ b/login.html
@@ -537,7 +537,7 @@
 				
 				<div class="menuPagin">
 					<div class="menuPagin-pagins">
-						<a href="#">Sobre</a>
+						<a href="./sobre.html">Sobre</a>
 						<a href="#">Contato</a>
 						<a href="./termos.html">Termos / Privacidade</a>
 					</div>
@@ -647,7 +647,7 @@
 			<main class="navgation">
 				
 				<div class="navgation-pagins">
-					<a href="">Sobre</a>
+					<a href="./sobre.html">Sobre</a>
 					<a href="">Contato</a>
 					<a href="./termos.html">Termos / Privacidade</a>
 				</div>
