--- a/home.html
+++ b/home.html
@@ -569,7 +569,7 @@
 						
 						<div class="simulado-content">
 							
-							<video>
+							<video autoplay loop>
 							<source src="./imagem/vestibular.mp4" type="video/mp4">
 							Carregando...
 						</video>
