--- a/sobre.html
+++ b/sobre.html
@@ -308,6 +308,7 @@
             .governo img {
             	width: 100px;
             	height: 100px;
+		border: none;
             }
             
   
