--- a/sobre.html
+++ b/sobre.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="./imagem/icon.png" type="x-icon">
-		<title>Escola Leticia / Sobre</title>
+		<title>Escola Letícia / Sobre</title>
 		
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Ysabeau:wght@900&display=swap');
@@ -215,6 +215,7 @@
             	color: #191919;
             	margin-top: 20px;
             	margin-bottom: 20px;
+		display: none;
             }
             
             .content img {
