--- a/termos.html
+++ b/termos.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="./imagem/icon.png" type="x-icon">
-		<title>Escola Leticia / Termos e Privacidade</title>
+		<title>Escola Letícia / Termos e Privacidade</title>
 		
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Ysabeau:wght@900&display=swap');
@@ -342,8 +342,8 @@
 				</div>
 				
 				<div class="navgation-creditos">
-					<p>Aluno Production
-					<br>Leticia @ 2023</p>
+					<p>9°A Production
+					<br>Letícia © 2023</p>
 				</div>
 				
 			</main>
