--- a/questoes/9ano.html
+++ b/questoes/9ano.html
@@ -379,7 +379,7 @@
 										<h5>(X-1)</h5>
 									</div>
 								</div>
-								<p>O valor de x que faz que a área dessa região seja igual a 21 é:</p>
+								<p>O valor de x que faz com que a área dessa região seja igual a 21 é:</p>
 								<div class="alternativas">
 									<a>( A ) -5</a><br>
 									<a>( B ) -4</a><br>
