--- a/index.html
+++ b/index.html
@@ -273,8 +273,7 @@
 				<div class="menuPagin">
 					<div class="menuPagin-pagins">
 						<a href="./sobre.html">Sobre</a>
-						<a href="#">Contato</a>
-						<a href="./termos.html">Termos / Privacidade</a>
+						<a href="tel:5516998877665">Contato</a
 					</div>
 				</div>
 			
@@ -315,8 +314,7 @@
 				
 				<div class="navgation-pagins">
 					<a href="./sobre.html">Sobre</a>
-					<a href="">Contato</a>
-					<a href="./termos.html">Termos / Privacidade</a>
+					<a href="tel:5516998877665">Contato</a
 				</div>
 				
 				<div class="navgation-creditos">
