--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 				
 				<div class="navgation-pagins">
 					<a href="./sobre.html">Sobre</a>
-					<a href="tel:5516998877665">Contato</a
+					<a href="tel:5516998877665">Contato</a>
 				</div>
 				
 				<div class="navgation-creditos">
