--- a/home.html
+++ b/home.html
@@ -525,6 +525,11 @@
   		  background-color: var(--corQuarta);
   		  transition: all .3s ease-in;
   		  }
+
+		 /* Logo link */
+		.navbar-left img {
+		  cursor: pointer;
+		}
   		  
   		                                              
       </style>
