--- a/index.html
+++ b/index.html
@@ -249,6 +249,11 @@
             color: var(--corQuarta);
             transition: all .2s ease-in;
             }
+
+		/* Logo link */
+		.navbar-left img {
+		  cursor: pointer;
+		}
             																
 		</style>
 		
