--- a/sobre.html
+++ b/sobre.html
@@ -311,6 +311,11 @@
             	height: 100px;
 		border: none;
             }
+
+		/* Logo link */
+		.navbar-left img {
+		  cursor: pointer;
+		}
             
   
 		</style>
