--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
 				
 				<div class="menuPagin">
 					<div class="menuPagin-pagins">
+						<a href="./home.html">Home</a>
 						<a href="./sobre.html">Sobre</a>
 						<a href="tel:5516998877665">Contato</a>
 					</div>
