--- a/sobre.html
+++ b/sobre.html
@@ -340,9 +340,9 @@
 				
 				<div class="menuPagin">
 					<div class="menuPagin-pagins">
-						<a href="#">Sobre</a>
-						<a href="#">Contato</a>
-						<a href="./termos.html">Termos / Privacidade</a>
+						<a href="./home.html">Home</a>
+						<a href="./sobre.html">Sobre</a>
+						<a href="tel:5516998877665">Contato</a>
 					</div>
 				</div>
 			
