--- a/index.html
+++ b/index.html
@@ -319,8 +319,9 @@
 			<main class="navgation">
 				
 				<div class="navgation-pagins">
+					<a href="./home.html">Home</a>
 					<a href="./sobre.html">Sobre</a>
-					<a href="tel:5516998877665">Contato</a>
+					<a href="#">Contato</a>
 				</div>
 				
 				<div class="navgation-creditos">
