--- a/sobre.html
+++ b/sobre.html
@@ -403,9 +403,9 @@
 			<main class="navgation">
 				
 				<div class="navgation-pagins">
-					<a href="#">Sobre</a>
+					<a href="./home.html">Home</a>
+					<a href="./sobre.html">Sobre</a>
 					<a href="#">Contato</a>
-					<a href="./termos.html">Termos / Privacidade</a>
 				</div>
 				
 				<div class="navgation-creditos">
