--- a/home.html
+++ b/home.html
@@ -534,7 +534,10 @@
 		/* REUNIAO DE PAIS */
 
 		.reuniao {
-		   
+	        width: 100%;
+		height: 500px;
+		border: 2px solid var(--corSecundaria);
+  		margin: 15px 0px 15px 0px;
 		}
   		                                              
       </style>
