--- a/home.html
+++ b/home.html
@@ -539,6 +539,16 @@
 		border: 2px solid var(--corSecundaria);
   		margin: 15px 0px 15px 0px;
 		}
+
+		.reuniao h1 {
+		width: 100%;
+		  height: 30px;
+		  background-color: var(--corSecundaria);
+		  color: white;
+		  font-size: 20px;
+		  padding-left: 10px;
+		  padding-top: 3px;
+		}
   		                                              
       </style>
 		
@@ -576,6 +586,7 @@
 				<div class="content">
 
 					<div class="reuniao">
+					   <h1>Reuniao de Pais</h1>
 						<img src="./imagem/reuniao.jpg">
 					</div>
 					
