--- a/home.html
+++ b/home.html
@@ -549,6 +549,11 @@
 		  padding-left: 10px;
 		  padding-top: 3px;
 		}
+
+		.reuniao img {
+		width: 100%;
+		height: 100%;
+		}
   		                                              
       </style>
 		
