--- a/home.html
+++ b/home.html
@@ -592,7 +592,7 @@
 
 					<div class="reuniao">
 					   <h1>Reuniao de Pais</h1>
-						<img src="./imagem/reuniao.jpg">
+						<img src="./imagem/reuniao.png">
 					</div>
 					
 					<div class="simulado">
