--- a/home.html
+++ b/home.html
@@ -535,7 +535,7 @@
 
 		.reuniao {
 	        width: 100%;
-		height: 500px;
+		height: auto;
 		border: 2px solid var(--corSecundaria);
   		margin: 15px 0px 15px 0px;
 		}
@@ -552,7 +552,7 @@
 
 		.reuniao img {
 		width: 100%;
-		height: 100%;
+		height: auto;
 		}
   		                                              
       </style>
