--- a/home.html
+++ b/home.html
@@ -803,18 +803,21 @@
 			
 			//OBS: criar os arquivos dentro de uma pasta(informacoes) sendo (provas), (horarios), (interclasse)
 			
-			// Entrar em Pagins
+			
+			// Entrar em Pagins BOTTOM-NAVGATION
 			
 			//Interclasse
 			var interclasse = document.querySelector(".interclasse");
 			interclasse.addEventListener("click", () => {
 				window.location.href = "./info/interclasse.html";
 			});
+			
 			//Provas
 			var provas = document.querySelector(".provas");
 			provas.addEventListener("click", () => {
 				window.location.href = "./info/provas.html";
 			});
+			
 			//Horarios
 			var horarios = document.querySelector(".horarios");
 			horarios.addEventListener("click", () => {
