--- a/info/interclasse.html
+++ b/info/interclasse.html
@@ -214,7 +214,7 @@
 			<nav class="navbar">
 				
 				<section class="navbar-left">
-					<img src="../imagem/logo.png"/>
+					<img onclick="home()" src="../imagem/logo.png"/>
 				</section>
 				
 				<section class="navbar-right">
@@ -293,6 +293,11 @@
 			abrirMenu.style.display = "block";
 			}
 			
+			// HOME
+			
+			function home(){
+				window.location.href = "../home.html";
+			}
 			
 		</script>
 	
