--- a/questoes/9ano.html
+++ b/questoes/9ano.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="../imagem/icon.png" type="x-icon">
-		<title>Escola Letícia / Questões - 9°ano</title>
+		<title>Escola Letícia / Questões - 9°ano </title>
 		
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Ysabeau:wght@900&display=swap');
-        	@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
         </style>
 
 		<style scoped>
@@ -340,7 +340,6 @@
 						<a href="../home.html">Home</a>
 						<a href="../sobre.html">Sobre</a>
 						<a href="#">Contato</a>
-						<a href="../termos.html">Termos / Privacidade</a>
 					</div>
 				</div>
 			
@@ -479,9 +478,9 @@
 			<main class="navgation">
 				
 				<div class="navgation-pagins">
+					<a href="../home.html">Home</a>
 					<a href="../sobre.html">Sobre</a>
 					<a href="#">Contato</a>
-					<a href="../termos.html">Termos / Privacidade</a>
 				</div>
 				
 				<div class="navgation-creditos">
