--- a/info/horarios.html
+++ b/info/horarios.html
@@ -213,6 +213,7 @@
             	align-items: center;
             	padding: 0px;
             	border: 2px solid var(--corSecundaria);
+		margin: 15px 0px 0px 0px;
             }
             
             .series h1{
