--- a/info/horarios.html
+++ b/info/horarios.html
@@ -1215,7 +1215,7 @@
 			
 		// Abrir Tabelas de Horarios
 		
-		var botoes = document.querySelector('.series');
+		var botoes = document.querySelectorAll('.series');
 		
 		function openNonoA(){
 			var tabela = document.getElementById('9anoA');
