--- a/info/horarios.html
+++ b/info/horarios.html
@@ -1215,7 +1215,7 @@
 			
 		// Abrir Tabelas de Horarios
 		
-		var botoes = document.querySelectorAll('.series');
+		var botoes = document.querySelector('.series');
 		
 		function openNonoA(){
 			var tabela = document.getElementById('9anoA');
@@ -1293,7 +1293,7 @@
 			// HOME
 			
 			function home(){
-				window.location.href = "../home.html";
+			window.location.href = "../home.html";
 			}
 			
 		</script>
