--- a/sobre.html
+++ b/sobre.html
@@ -514,12 +514,14 @@
 		var aniversario = new Date(agora.getFullYear(),  7, 22, 0, 0, 0);
 		
 		if (agora.getTime() >=  aniversario.getTime()) {
-			avisoAraraquara.style.display = "flex";
-			setTimeout( () => {
-				avisoAraraquara.style.opacity = "100%";
-			}, 200);
+			if (agora.getTime() <= aniversario.getTime() + 24 * 60 * 60 * 1000) {
+				avisoAraraquara.style.display = "flex";
+				setTimeout( () => {
+					avisoAraraquara.style.opacity = "100%";
+				}, 200);
+			}
 		}
-		
+
 		function closeAviso() {
 			avisos.style.opacity = "0%";
 			setTimeout( () => {
