--- a/home.html
+++ b/home.html
@@ -842,6 +842,16 @@
 				</div>
 				
 			</main>
+
+			<!------------ AVISOS ------------>
+			
+			<!-- Aniversario de araraquara -->
+			<div class="aviso" id="araraquara">
+				<h1>AVISO</h1>
+				<h2>22 de agosto FERIADO</h2>
+				<p>Feliz Aniversario Araraquara!!</p>
+				<button onclick="closeAviso()">Entendido</button>
+			</div>
 			
 		</body>
 
