--- a/home.html
+++ b/home.html
@@ -671,7 +671,7 @@
 					
                                         <div class="comunicado">
 					   <h1>7 de Setembro</h1>
-						<img src="./imagem/7setembro.png">
+						<img src="./imagem/7setembro.jpg">
 					</div>
 					
 					<div class="comunicado">
