--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="./imagem/icon.png" type="x-icon">
+		<meta name="author" content="Escola Letícia">
 		<title>Escola Letícia</title>
 		
         <style>
@@ -321,7 +322,7 @@
 				<div class="navgation-pagins">
 					<a href="./home.html">Home</a>
 					<a href="./sobre.html">Sobre</a>
-					<a href="#">Contato</a>
+					<a href="tel:1633244623">Contato</a>
 				</div>
 				
 				<div class="navgation-creditos">
