--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="./imagem/icon.png" type="x-icon">
 		<meta name="author" content="Escola Letícia">
+		<meta property="og:site_name" content="Escola Letícia">
+		<meta property="og:url" content="/">
+		<meta property="og:title" content="Escola Letícia">
+	  
 		<title>Escola Letícia</title>
 		
         <style>
