--- a/home.html
+++ b/home.html
@@ -655,7 +655,7 @@
 					<div class="menuPagin-pagins">
 						<a href="./home.html">Home</a>
 						<a href="./sobre.html">Sobre</a>
-						<a href="#">Contato</a>
+						<a href="tel:1633244623">Contato</a>
 					</div>
 				</div>
 			
@@ -829,7 +829,7 @@
 				<div class="navgation-pagins">
 					<a href="./home.html">Home</a>
 					<a href="./sobre.html">Sobre</a>
-					<a href="#">Contato</a>
+					<a href="tel:1633244623">Contato</a>
 				</div>
 				
 				<div class="navgation-creditos">
