--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="icon" href="./imagem/icon.png" type="x-icon">
+		<link rel="icon" href="https://escola-leticia.netlify.app/imagem/icon.png" type="x-icon">
 		<link type="stylesheet" src="./style.css">
 		<title>Escola Letícia / Home</title>
 		
