--- a/info/interclasse.html
+++ b/info/interclasse.html
@@ -230,7 +230,7 @@
 					<div class="menuPagin-pagins">
 						<a href="../home.html">Home</a>
 						<a href="../sobre.html">Sobre</a>
-						<a href="#">Contato</a>
+						<a href="tel:1633244623">Contato</a>
 					</div>
 				</div>
 			
@@ -253,11 +253,11 @@
 				<div class="navgation-pagins">
 					<a href="../home.html">Home</a>
 					<a href="../sobre.html">Sobre</a>
-					<a href="#">Contato</a>
+					<a href="tel:1633244623">Contato</a>
 				</div>
 				
 				<div class="navgation-creditos">
-					<p>Aluno Production
+					<p>9°A Production
 					<br>Leticia @ 2023</p>
 				</div>
 				
