--- a/home.html
+++ b/home.html
@@ -537,6 +537,7 @@
 				display: flex;
 				flex-direction: column;
 				align-items: center;
+				margin: 0px 0px 15px 0px;
 			}
 
 			.comunicado {
@@ -633,7 +634,38 @@
 			#araraquara {
 				display: none;
 				opacity: 0%;
-		}
+			}
+
+			.carregando {
+                position: relative;
+                width: auto;
+                height: auto;
+                display: flex;
+                align-items: center;
+                color: var(--corPrincipal);
+            }
+
+            .carregando span {
+                width: 80px;
+                height: 80px;
+                border-radius: 50%;
+                border: 20px solid var(--corPrincipal);
+                border-top: 21px solid transparent;
+                animation: loading 1.5s linear infinite;
+            }
+
+            .carregando h2 {
+                margin: 0px 0px 0px 20px;
+            }
+
+            @keyframes loading {
+                0% {
+                    transform: rotate(0deg);
+                }
+                100% {
+                    transform: rotate(360deg);
+                }
+            }
 		
       </style>
 		
@@ -672,6 +704,11 @@
 				<section class="content">
 
 					<div class="comunicados">
+
+						<section style="margin: 10px 0px 0px 0px;" class="carregando">
+                            <span></span>
+                            <h2>Carregando..</h2>
+                        </section>
 
 					</div>
 					
@@ -984,7 +1021,9 @@
 		db.collection(ANO)
 		.doc('site')
 		.collection('comunicados')
+		.orderBy("data")
 		.onSnapshot((data) => {
+			div.innerHTML = '';
 			data.docs.map((val) => {
 				const titulo = val.data().titulo;
 				const imagem = val.data().imagem;
