--- a/home.html
+++ b/home.html
@@ -535,7 +535,7 @@
 			.comunicados {
 				width: 100%;
 				display: flex;
-				flex-direction: column;
+                flex-direction: column-reverse;
 				align-items: center;
 				margin: 0px 0px 15px 0px;
 			}
