atualizando banco de dados do site

--- a/comunicados/index.html
+++ b/comunicados/index.html
@@ -216,13 +216,14 @@
         const ANO = localStorage.getItem('ano');
 
 		const firebaseConfig = {
-            apiKey: "AIzaSyC6aMNEjsgeGK-rw4hzLUximzh1YQ6OEII",
-            authDomain: "banco-de-dados-32cac.firebaseapp.com",
-            projectId: "banco-de-dados-32cac",
-            storageBucket: "banco-de-dados-32cac.appspot.com",
-            messagingSenderId: "1001209948956",
-            appId: "1:1001209948956:web:e28198053d747377aee8d9"
-        };
+			apiKey: "AIzaSyAA46auin7rfkLJRNQizOqQ0tftYoCaUo4",
+			authDomain: "site-a6c21.firebaseapp.com",
+			projectId: "site-a6c21",
+			storageBucket: "site-a6c21.appspot.com",
+			messagingSenderId: "286901777025",
+			appId: "1:286901777025:web:08c29399979a4c2a435380",
+			measurementId: "G-8GMR8D5FL0"
+		};
 
 		// Initialize Firebase
         firebase.initializeApp(firebaseConfig);
