atualizando da pagina NOTICIAS

--- a/home/index.html
+++ b/home/index.html
@@ -199,7 +199,7 @@
 			}, 300);
 		}
 
-		function abrirMenu() {
+			function abrirMenu() {
 				const iconAbrir = document.getElementById('iconAbrirMenu');
 				const iconFechar = document.getElementById('iconFecharMenu');
 				iconAbrir.style.display = "none";
@@ -331,7 +331,7 @@
 						</div>
 					'
 					Dessa forma, me de um questão de ${materia} de multipla escolha, com situações problemas, com nivel de vestibular para ${ano}, 
-					seguindo o modelo de exemplo; siga o ex.. só use h1, div, input e label por favor, só de a questão, não fale nada alem dela. Obrigado
+					seguindo o modelo de exemplo; só use h1, div, input e label, e certifique-se de a alternativa correta tem o value 'certa' por favor, e só de questoes de texto, sem figura.. só de a questão, não fale nada alem dela. Obrigado
 				`;
 
 				const respostaElemento = document.querySelector('.questoes');
