--- a/comunicados/index.html
+++ b/comunicados/index.html
@@ -215,52 +215,53 @@
         localStorage.setItem('ano', anoAtual);
         const ANO = localStorage.getItem('ano');
 
-		const firebaseConfig = {
-			apiKey: "AIzaSyAA46auin7rfkLJRNQizOqQ0tftYoCaUo4",
-			authDomain: "site-a6c21.firebaseapp.com",
-			projectId: "site-a6c21",
-			storageBucket: "site-a6c21.appspot.com",
-			messagingSenderId: "286901777025",
-			appId: "1:286901777025:web:08c29399979a4c2a435380",
-			measurementId: "G-8GMR8D5FL0"
-		};
+	const firebaseConfig = {
+	  apiKey: "AIzaSyCDI4dwNEiG3ZinEIxKunnKPqUCOVXxKwI",
+	  authDomain: "site-leticia-677e8.firebaseapp.com",
+	  projectId: "site-leticia-677e8",
+	  storageBucket: "site-leticia-677e8.appspot.com",
+	  messagingSenderId: "279714243746",
+	  appId: "1:279714243746:web:4e3ba3a98987f5cf7e63fb"
+	};
 
 		// Initialize Firebase
         firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
-		const storage = firebase.storage();
+	const storage = firebase.storage();
 		
 
-		// LENDO TODOS OS COMUNICADOS
-		const div = document.querySelector('.comunicados ul');
-		db.collection(ANO)
-		.doc('site')
-		.collection('comunicados')
-		.orderBy("data")
-		.onSnapshot((data) => {
-			div.innerHTML = '';
-			data.docs.map((val) => {
-				const titulo = val.data().titulo;
-				const imagem = val.data().imagem;
-				const storageRef = storage.ref().child(`site/comunicados/${imagem}`);
-				storageRef.getDownloadURL().then(function (urlImagem) {	
-					div.innerHTML += `
-						<div class="comunicado">
-							<img src="${urlImagem}" alt="${imagem}">
-						</div>
-					`;
-				});
-				
+	// LENDO TODOS OS COMUNICADOS
+	const div = document.querySelector('.comunicados ul');
+	db.collection(ANO)
+	.doc('comunicados')
+	.collection('comunicados')
+	.orderBy("data")
+	.onSnapshot((data) => {
+		div.innerHTML = '';
+		data.docs.map((val) => {
+			const titulo = val.data().titulo;
+			const imagem = val.data().imagem;
+			const storageRef = storage.ref(`${ANO}/comunicados/${imagem}`);
+			storageRef.getDownloadURL().then( function (urlImagem) {	
+				div.innerHTML += `
+					<div class="comunicado">
+						<img src="${urlImagem}" alt="${imagem}">
+						<h1>${titulo}</h1>
+						<p>${mensagem}</p>
+					</div>
+				`;
 			});
+			
 		});
+	});
 
 
 
-		// CHAT GPT 
-		async function chatGPT() {
-            const apiKey = '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';
-            const mensagem = document.getElementById('pesquisa').value;
-			const respostaElemento = document.getElementById('resposta');
+	// CHAT GPT 
+	async function chatGPT() {
+	const apiKey = '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';
+	const mensagem = document.getElementById('pesquisa').value;
+	const respostaElemento = document.getElementById('resposta');
 
             const resposta = await fetch('https://api.openai.com/v1/chat/completions', {
                 method: 'POST',
